--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - ./application/indexes:/app/application/indexes
       - ./application/inputs:/app/application/inputs
       - ./application/vectors:/app/application/vectors
+      - ./models:/app/models
     depends_on:
       - redis
       - mongo
