--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.10-slim-bullseye as builder
 
 # Tiktoken requires Rust toolchain, so build it in a separate stage
-RUN apt-get update && apt-get install -y gcc curl
+RUN apt-get update && apt-get install -y gcc curl g++ clang 
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y && apt-get install --reinstall libc6-dev -y
 ENV PATH="/root/.cargo/bin:${PATH}"
-RUN pip install --upgrade pip && pip install tiktoken==0.3.3
+RUN pip install --upgrade pip && pip install tiktoken==0.3.3 llama-cpp-python
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
@@ -20,4 +20,4 @@ ENV FLASK_DEBUG=true
 
 EXPOSE 7091
 
-CMD ["gunicorn", "-w", "2", "--timeout", "120", "--bind", "0.0.0.0:7091", "application.wsgi:app"]
+CMD ["gunicorn", "-w", "2", "--timeout", "300", "--bind", "0.0.0.0:7091", "application.wsgi:app"]
